charon/tests/ui/traits/issue-1242-dyn-send-supertrait.rs
//@ known-failure
//@ charon-args=--extract-opaque-bodies --desugar-drops --precise-drops --monomorphize

trait Trait: Send {}

fn foo(x: &dyn Trait) -> &dyn Send {
    x
}
